[CompositeAfterPaint] Let cc know the viewport page scale transform node

Bug: 726066, 909750
Change-Id: I12242ad3facdc7e8877833d2c436e383f2c9530f
Reviewed-on: https://chromium-review.googlesource.com/c/1352322
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612030}
Former-commit-id: eb746a5c826f771ce4a35e2dffefee5c19cf0966