third_party/blink/renderer/platform/graphics/compositing/property_tree_manager.h
@@ -100,8 +100,7 @@ class PropertyTreeManager {
   int EnsureCompositorScrollNode(
       const TransformPaintPropertyNode* scroll_offset_translation);
 
-  void EnsureCompositorPageScaleTransformNode(
-      const TransformPaintPropertyNode*);
+  int EnsureCompositorPageScaleTransformNode(const TransformPaintPropertyNode*);
 
   // This function is expected to be invoked right before emitting each layer.
   // It keeps track of the nesting of clip and effects, output a composited
